tests/invalid/for_zip_unpack_non_list_args/main.py
def run_case() -> None:
    for a, b in zip((1, 2), [3, 4]):
        print(a + b)

if __name__ == "__main__":
    run_case()
